--- a/share/14.html
+++ b/share/14.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta property="og:title" content="이재명의 비전">  
-  <meta property="og:description" content="AI산업으로 도약하는 대구">  
-  <meta property="og:image" content="/images/14.jpg">
-  <meta property="og:url" content="/share/14.html">
+  <meta property="og:description" content="이런 대구를 만들겠습니다!">   
+  <meta property="og:image" content="http://bluenew.life/thisdaegu/images/14.jpg">
+  <meta property="og:url" content="http://bluenew.life/thisdaegu/share/14.html">
   <meta name="twitter:card" content="summary_large_image">
   <title>이재명의 말을 들어보세요!</title>
-  <meta http-equiv="refresh" content="0; url=/index.html?img=14">
+  <meta http-equiv="refresh" content="0; url=http://bluenew.life/thisdaegu/index.html?img=14">
 </head>
 <body>
   <p>공유 페이지로 이동 중입니다...</p>
